<resources>
    <string name="app_name">Malek Malek</string>

    //home page stirngs
    //bottom nav
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_favourite_string">Favourite</string>
    <string name="bottom_nav_order_history_string">Order History</string>
    <string name="bottom_nav_total_item_string">Total Item</string>
    <string name="p_problem">রোগীর সমস্যাঃ</string>
    <string name="p_problem_titel">এই ধরেন ভাল লাগে ঘুরতে</string>
    <string name="blood_qty">রক্তের পরিমাণঃ</string>
    <string name="blood_qty_titel">০৫ ব্যাগ</string>
    <string name="blood_group">রক্তের গ্রুপঃ</string>
    <string name="donation_time">রক্তদানের সময়ঃ</string>
    <string name="donation_time_titel">সকাল ১০টা</string>
    <string name="title_activity_splash_screen">SplashScreen_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Login</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_forget_pass_text">Forgot password</string>
    <string name="login_bottom_registration_text">registration</string>
    <string name="login_new_registration_btn_text">Registration</string>
    <string name="login_password_hint_text">password</string>
    <string name="login_number_hint">মোবাইল নাম্বার দিন</string>
    <string name="login_head_text">head text log in</string>
    <string name="user_name">আপনার নাম দিন</string>
    <string name="weight">আপনার ওজন দিন</string>
    <string name="blood_group_signup"> আপানর রক্তের গ্রুপ দিন</string>
    <string name="age">আপনার ওজন দিন</string>
    <string name="sex">" লিঙ্গ"</string>
    <string name="address">আপনার ঠিকানা দিন</string>


</resources>