<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_above="@id/login_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingBottom="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:src="@mipmap/ic_launcher_s21_store_circle"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:textStyle="bold"
                    android:layout_margin="15dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:text="@string/login_head_text"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                android:padding="25dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.HisabBondhu.TextInputLayout"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_margin="4dp"
                    android:hint="@string/user_name"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:padding="15dp"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_baseline_drive_file_rename_outline_24"
                        android:fontFamily="@font/roboto_regular"
                        android:textColorHint="@color/gray_text_color"
                        android:textColor="@color/gray_text_color"
                        android:id="@+id/login_number_id"
                        android:maxLines="1"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.HisabBondhu.TextInputLayout"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_margin="4dp"
                    android:hint="@string/login_number_hint"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:drawablePadding="10dp"
                        android:padding="15dp"
                        android:drawableLeft="@drawable/ic_baseline_call_24"
                        android:fontFamily="@font/roboto_regular"
                        android:textColorHint="@color/gray_text_color"
                        android:textColor="@color/gray_text_color"
                        android:inputType="numberDecimal"
                        android:id="@+id/sign_up_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.HisabBondhu.TextInputLayout"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_margin="4dp"
                    android:hint="@string/blood_group"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:drawablePadding="10dp"
                        android:padding="15dp"
                        android:drawableLeft="@drawable/ic_baseline_bloodtype_24"
                        android:fontFamily="@font/roboto_regular"
                        android:textColorHint="@color/gray_text_color"
                        android:textColor="@color/gray_text_color"
                        android:inputType="text"
                        android:id="@+id/sign_up_blood_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.HisabBondhu.TextInputLayout"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_margin="4dp"
                    android:hint="@string/age"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:drawablePadding="10dp"
                        android:padding="15dp"
                        android:drawableLeft="@drawable/ic_baseline_monitor_weight_24"
                        android:fontFamily="@font/roboto_regular"
                        android:textColorHint="@color/gray_text_color"
                        android:textColor="@color/gray_text_color"
                        android:inputType="numberDecimal"
                        android:id="@+id/sign_up_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.HisabBondhu.TextInputLayout"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_margin="4dp"
                    android:hint="@string/sex"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:drawablePadding="10dp"
                        android:padding="15dp"
                        android:drawableLeft="@drawable/ic_baseline_female_24"
                        android:fontFamily="@font/roboto_regular"
                        android:textColorHint="@color/gray_text_color"
                        android:textColor="@color/gray_text_color"
                        android:inputType="numberDecimal"
                        android:id="@+id/sex_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.HisabBondhu.TextInputLayout"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_margin="4dp"
                    android:hint="@string/address"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:drawablePadding="10dp"
                        android:padding="15dp"
                        android:drawableLeft="@drawable/ic_baseline_location_on_24"
                        android:fontFamily="@font/roboto_regular"
                        android:textColorHint="@color/gray_text_color"
                        android:textColor="@color/gray_text_color"
                        android:inputType="numberDecimal"
                        android:id="@+id/address_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>



                <TextView
                    android:textColor="@color/gray_text_color"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:id="@+id/login_forget_pass_id"
                    android:textSize="14sp"
                    android:layout_margin="5dp"
                    android:text="login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/login_bottom_layout"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="150dp" >

        <Button
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="8dp"
            android:focusable="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:id="@+id/login_registration_btn_id"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:text="@string/login_new_registration_btn_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>